<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/thumbnail_image_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/movietitle"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:text="@string/name_movie"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:textAlignment="center"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20sp"
                android:layout_below="@+id/movietitle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/release"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:text="@string/release"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_below="@+id/userrating"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/releasedate"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20sp"
                android:layout_below="@+id/release"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rating"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:text="@string/rating"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_below="@+id/plotsynopsis"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userrating"
                android:textAlignment="center"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20sp"
                android:layout_below="@+id/rating"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/plot"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:text="@string/plot"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_below="@+id/title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/plotsynopsis"
                android:textAlignment="center"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20sp"
                android:layout_below="@+id/plot"/>

            <Button
                android:id="@+id/addToFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent"
                android:text="@string/add_to_favorite" />


        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>